2013-03-29  Juanma Barranquero  <lekktu@gmail.com>

	* makefile.w32-in ($(BLD)/filelock.$(O), $(BLD)/filelock.$(O)):
	Update dependencies.

2013-03-28  Stefan Monnier  <monnier@iro.umontreal.ca>

	* lisp.h (save_type, XSAVE_POINTER, set_save_pointer, XSAVE_INTEGER)
	(set_save_integer, XSAVE_OBJECT, XSAVE_VALUE): Move to avoid
	forward references.

2013-03-28  Dmitry Antipov  <dmantipov@yandex.ru>

	* window.h (struct window): Replace hchild, vchild and buffer slots
	with the only contents slot.  This is possible because each valid
	window may have either the child window (in vertical or horizontal
	combination) or buffer to display (for the leaf window).  Using that,
	a lof of operations to traverse and/or change window hierarchies may
	be simplified.  New member horizontal is used to distinguish between
	horizontal and vertical combinations of internal windows.
	(WINDOW_LEAF_P, WINDOW_HORIZONTAL_COMBINATION_P)
	(WINDOW_VERTICAL_COMBINATION_P): New macros.
	(WINDOW_VALID_P, WINDOW_LIVE_P): Adjust to match struct window changes.
	* window.c (wset_hchild, wset_vchild): Remove.  Adjust all users.
	Use contents slot, not buffer, where appropriate.
	(wset_combination): New function.
	(wset_buffer): Add eassert.
	(Fframe_first_window): Simplify the loop reaching first window.
	(Fwindow_buffer): Use WINDOW_LEAF_P.
	(Fwindow_top_child): Use WINDOW_VERTICAL_COMBINATION_P.
	(Fwindow_left_child): Use WINDOW_HORIZONTAL_COMBINATION_P.
	(unshow_buffer): Convert initial debugging check to eassert.
	(replace_window, recombine_windows, Fdelete_other_windows_internal)
	(make_parent_window, window_resize_check, window_resize_apply)
	(resize_frame_windows, Fsplit_window_internal, Fdelete_window_internal)
	(Fset_window_configuration, delete_all_child_windows, save_window_save):
	Adjust to match struct window changes.
	(window_loop): Check for broken markers in CHECK_ALL_WINDOWS.
	(mark_window_cursors_off, count_windows, get_leaf_windows)
	(foreach_window_1): Simplify the loop.